# Goldilocks

./: .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  Dockerfile  IMPLEMENTATION-SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  TECHNICAL_SPECIFICATIONS.md  app.py  clean.py  docker-bake.json  docker-compose.yml  globals.xml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  start-dev.sh
.benchmarks/: build_20250924_155619.json  build_20250924_155638.json  build_20250924_160128.json  build_20250924_161030.json  build_20250924_161237.json  build_20250924_161314.json  build_20250924_161402.json  build_20250925_101238.json  build_20250925_101332.json  build_20250925_101626.json  build_20250925_101949.json  devcontainer-build-benchmark.sh  latest_benchmark_summary.txt
docs/: toc.yml  (+13 more)
src/: pyproject.toml  setup.py  test_setup.py
src/docs/: __init__.py  cli.py  collectors.py  generators.py  models.py  processors.py  service.py
src/goldilocks/: __init__.py  app.py  app_old.py
src/goldilocks/api/: __init__.py  auth.py  main.py
src/goldilocks/core/: __init__.py  app_factory.py
src/goldilocks/models/: __init__.py  database.py  database_simple.py  database_v2.py  forms.py
src/goldilocks/services/: __init__.py  auth.py
src/goldilocks/templates/auth/: login.html  register.html
src/goldilocks/templates/main/: index.html
src/goldilocks/tests/: conftest.py
src/goldilocks/tests/api/: test_api_endpoints.py  test_auth_endpoints.py
src/goldilocks/tests/core/: __init__.py  test_app_factory.py
src/goldilocks/tests/errors/: test_404.py
src/goldilocks/tests/health/: test_health.py
src/goldilocks/tests/index/: test_index.py
src/goldilocks/tests/models/: __init__.py  test_database_models.py
src/goldilocks/tests/services/: test_auth_service.py
src/goldilocks/tests/templates/: test_template_system.py
src/goldilocks/tests/utils/: __init__.py  test_helpers.py  test_utils.py
src/goldilocks/tests/version/: test_version.py  test_version_fallback.py
src/goldilocks/utils/: __init__.py
src/instance/: goldilocks.db
src/setup/: __init__.py  base.py  cli.py  common.py
src/setup/container/: __init__.py  health_checks.py  optimizer.py
src/setup/linux/: __init__.py  package_manager.py  python_builder.py  tools.py
src/setup/windows/: __init__.py  python_installer.py  tools.py
src/tests/: __init__.py  conftest.py
src/tests/api/: __init__.py  test_api_endpoints.py  test_auth_endpoints.py
src/tests/core/: test_app_factory.py
src/tests/docs/: __init__.py  test_collectors.py  test_generators.py  test_service.py
src/tests/health/: test_health.py
src/tests/index/: test_index.py
src/tests/models/: test_database_models.py
src/tests/services/: __init__.py  test_auth_service.py
src/tests/templates/: __init__.py
src/tests/utils/: test_helpers.py  test_utils.py
src/tests/version/: test_version.py
(+140 files in other folders)
